argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  gateways:
    - argocd-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
        - port: 30001
      route:
        - destination:
            host: argo-cd-argocd-server
            port:
              number: 80
